fix colorpicker on mobile and active states on colors

--- a/src/components/Toolbar.css
+++ b/src/components/Toolbar.css
@@ -38,8 +38,7 @@ fieldset.colors {
 }
 
 .toolbar input[type="radio"] + label,
-.toolbar input[type="hidden"] + label,
-.toolbar input[type="color"] + label {
+.colors label {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,26 +47,9 @@ fieldset.colors {
   padding: 0.3rem;
 }
 
-.toolbar label svg {
-  aspect-ratio: 1;
-  width: 1.56rem;
-  height: 1.56rem;
-}
-
-.colors label svg {
-  aspect-ratio: 1;
-  width: 1.25rem;
-  height: 1.25rem;
-}
-
-#lineColorWhite + label svg {
+#lineColorWhite svg {
   border-radius: 50%;
   border: 1px solid #ccc;
-}
-
-input[type="radio"]:checked + label,
-input#lineColorPicker:checked + label {
-  background: #ccc;
 }
 
 input#lineColorPicker {
@@ -114,6 +96,22 @@ button#clear {
   bottom: 0;
 }
 
-#save-btn {
-  /* behövs nåt? */
+.colors label,
+.tools label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  aspect-ratio: 1;
+  border-radius: 0.5rem;
+}
+
+input[type="radio"]:checked + label,
+.colors label.active,
+.tools label.active {
+  background: #ccc;
+}
+
+.colors label {
+  width: 2rem;
+  height: 2rem;
 }
